unpackaged/main/default/objects/Service_level_atribute__c/Service_level_atribute__c.object-meta.xml
<CustomObject>
    <label>Service level attribute</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Service level atribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service level attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>