unpackaged/main/default/objects/Service_level_atribute__c/fields/Code_api__c.field-meta.xml
<CustomField>
    <fullName>Code_api__c</fullName>
    <formula>TEXT(Service_level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code api</label>
    <type>Text</type>
</CustomField>