unpackaged/main/default/objects/Service_level_atribute__c/fields/Service_level__c.field-meta.xml
<CustomField>
    <fullName>Service_level__c</fullName>
    <label>Service level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceLevel</valueSetName>
    </valueSet>
</CustomField>