unpackaged/main/default/objects/Service_level_atribute__c/fields/Service_Level_feature__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_feature__c</fullName>
    <label>Service Level feature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Level_feature</valueSetName>
    </valueSet>
</CustomField>