unpackaged/main/default/objects/Service_level_atribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Service_level__c</columns>
    <columns>Service_Level_feature__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>